# MinhNguyen-WBA-PreReqQ4

airdrop/: .gitignore  airdrop.ts  dev-wallet.json  enroll.ts  keygen.ts  package.json  transfer.ts
airdrop/programs/: wba_prereq.ts
rust/: Cargo.toml  README.md  dev-wallet.json
rust/src/: lib.rs
rust/src/programs/: wba_prereq.rs
